trying to fix the spacing issue on the Project List

--- a/client/src/components/ContactFormSubmit/ContactFormSubmit.css
+++ b/client/src/components/ContactFormSubmit/ContactFormSubmit.css
@@ -3,8 +3,9 @@
 }
 
 .ContactFormSubmit{
-    background-color: #DFDFDF;
+    background-color: #0066cc;
     text-align: center;
+    color: white;
     width: 75%;
     margin:0 auto;
     border: 1px;
