--- a/client/src/components/ProjectList/ProjectList.css
+++ b/client/src/components/ProjectList/ProjectList.css
@@ -1,11 +1,10 @@
 .individualProject {
     width: 75%;
-    height: 300px;
+    height: 340px;
     position: relative;
     margin: auto;
 }
 
 .imageBox {
     position: relative;
-    height: 340px;
 }
